--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline for Dockerized Go App
+name: Go Dockerized CI
 
 on:
   push:
@@ -15,22 +15,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+          
       - name: Build and tag Docker image
         run: |
           docker-compose -f docker-compose.yml build
-
+          
       - name: Run containers
         run: |
           docker-compose -f docker-compose.yml up -d
           sleep 10
-          
+
       - name: Run tests inside the container
         run: |
           docker exec myserv-app-container go test ./tests -v
-
+          
       - name: Stop and clean up
         run: docker-compose -f docker-compose.yml down
