update docker env

--- a/.github/workflows/go-ci-docker.yml
+++ b/.github/workflows/go-ci-docker.yml
@@ -30,11 +30,7 @@ jobs:
           docker-compose -f docker-compose.yml up -d
           sleep 10
 
-      - name: Wait for containers to be ready
-        run: |
-            timeout 30s bash -c "until docker exec myserv-app-container curl -sf http://localhost:8181/health; do sleep 1; done"
-
-      - name: Run tests inside the container
+      - name: Run tests
         run: |
           docker exec myserv-app-container go test ./tests -v
           
